--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <nav>
         <div class= "name">
-            <img class = "logo" src="./Resources/Logo.png"/>    
+            <img class = "logo" src="./resources/Logo.png"/>    
         </div>
         <button class="nav_toggle" aria-expanded="false"><i class="fa-solid fa-bars fa-2x burger-nav" style="color:black" ></i></button>
         <ul class = "nav_bar" data-visible="false">
@@ -50,7 +50,7 @@
     <section class="about" > 
         <div class="about_container" id="about">
             <h1>ABOUT ME</h1>
-            <img src="./Resources/bestDeveloper.jpeg" alt="A picture of me, best developer in the future" id="profile-pic">
+            <img src="./resources/bestDeveloper.jpeg" alt="A picture of me, best developer in the future" id="profile-pic">
             <p>Hey there! I'm Mateusz, a graduated civil engineering turned coding enthusiast. 
                 While my roots lie in the world of civil engineering, my heart now beats to the rhythm of coding and web development.
                 <br>Currently, I'm on an exhilarating journey through a full-stack engineering course, honing my skills in both front-end and back-end development. 
